# MLNNgui

./: CMakeLists.txt  README.md
src/Algorithms/: CMakeLists.txt
src/Algorithms/K-means/: CMakeLists.txt
src/Algorithms/K-means/headers/: Kmeans.h
src/Algorithms/K-means/source/: Kmeans.cpp
src/Algorithms/KNN/: CMakeLists.txt
src/Algorithms/KNN/headers/: KNN.h
src/Algorithms/KNN/source/: KNN.cpp
src/ETL/: CMakeLists.txt
src/ETL/headers/: Data.h  DataProcessor.h  GeneralizedDataContainer.h
src/ETL/source/: Data.cpp  DataProcessor.cpp
src/NEURAL_NETWORK/: CMakeLists.txt
src/NEURAL_NETWORK/include/: Layer.h  Network.h  Neuron.h  layer.hpp  network.hpp  neuron.hpp
src/NEURAL_NETWORK/src/: Layer.cpp  Network.cpp  Neuron.cpp  layer.cc  network.cc  neuron.cc
src/qt/headers/: kmeans.h  knn.h  mainwindow.h  neuralnetwork.h
src/qt/source/: kmeans.cpp  knn.cpp  mainwindow.cpp  neuralnetwork.cpp
src/qt/ui/: kmeans.ui  kmeans.ui.autosave.yNJulW  knn.ui  mainwindow.ui  neuralnetwork.ui
