cmake_minimum_required(VERSION 3.17)
project(UTILS)
include_directories(K-means KNN)
set(HEADER_LIB ../ETL/headers/GeneralizedDataContainer.h K-means/headers/Kmeans.h KNN/headers/KNN.h)
set(SOURCE K-means/source/Kmeans.cpp KNN/source/KNN.cpp)
add_subdirectory(K-means)
add_subdirectory(KNN)
add_library(UTILS STATIC ${HEADER_LIB} ${SOURCE})
target_link_libraries(UTILS K-MeansMethod KnnMethod)