cmake_minimum_required(VERSION 3.17)
project(Network)
set(CMAKE_CXX_STANDARD 20)
#include_directories(headers source)
set(SOURCE_LIB src/Neuron.cpp src/layer.cpp src/Network.cpp)
set(HEADERS_LIB include/Neuron.h include/Layer.h include/Network.h)
add_library(Network STATIC ${SOURCE_LIB} ${HEADERS_LIB})
